<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" >
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:background="#01b1ea"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="16sp"
        android:id="@+id/title"
        />


    <com.yusun.batterymonitor.RoundImageView
        android:layout_width="match_parent" 
        android:layout_height="190dip"
        android:id="@+id/round"
        android:layout_marginTop="55dp"
        android:paddingLeft="3dp"
        android:layout_centerHorizontal="true"
        android:onClick="savepower"
            />
	<TextView 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/round"
    	android:layout_centerHorizontal="true"
    	android:layout_marginTop="40dp"
    	android:textSize="12sp"
    	android:id="@+id/lookingbattery"
    	android:text="@string/lookingbattery"
    	android:textColor="#fff"
    />

	
	<TextView 
	    style="@style/hintText"
	    android:id="@+id/health"
	    android:layout_below="@id/lookingbattery"
	    android:layout_marginTop="15dp"
	    />
    <TextView
        android:id="@+id/batterypercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textColor="#f0f0f0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textSize="35sp"
         />

	<TextView 
	    style="@style/hintText"
	    android:id="@+id/vote"
	    android:layout_below="@id/health"
	   />
	<TextView 
	    style="@style/hintText"
	    android:id="@+id/tempearture"
	    android:layout_below="@id/vote"
	     />
	
	<TextView 
	    style="@style/hintText"
	    android:id="@+id/charge_time"
	    android:layout_marginTop="60dp"
        android:textSize="25sp"
	    android:layout_below="@id/tempearture"
	    android:layout_centerHorizontal="true"/>
	 <TextView
        android:id="@+id/BatteryLevel"
        style="@style/hintText"
        android:layout_below="@id/tempearture"
        />
	<TextView
	    android:layout_below="@id/BatteryLevel"
	    android:id="@+id/hit_time"
	    android:visibility="gone"
	    style="@style/hintText"
	    android:text="@string/charinglefttime"
	   />
 <!--   <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batteryisage"
        android:background="@drawable/button_bg"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="#e4e4e4"
        android:id="@+id/settingsbutton"/>
	 --> 
	
	<com.yusun.batterymonitor.CircularProgressButton
            android:id="@+id/circularButton1"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/cpb_white"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            app:cpb_cornerRadius="48dp"
            android:layout_margin="10dp"
            app:cpb_paddingProgress="10dp"
            android:visibility="gone"
            app:cpb_textComplete="@string/Complete"
            app:cpb_textError="@string/Error"
            app:cpb_textIdle="@string/Upload" />
	<com.yusun.batterymonitor.CircularProgressButton
            android:id="@+id/settingsbutton"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/cpb_white"
            android:layout_centerHorizontal="true"
        	android:layout_alignParentBottom="true"
            android:textSize="18sp"
            app:cpb_cornerRadius="48dp"
            android:layout_margin="10dp"
            app:cpb_paddingProgress="10dp"
            app:cpb_textComplete="@string/Complete"
            app:cpb_textError="@string/Error"
            app:cpb_textIdle="@string/batteryisage" />

</RelativeLayout>
